--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,45 @@
     <![endif]-->
 </head>
 <body>
-<h1>Hello, world!</h1>
+<!--HEADER START-->
+<header>
+    <div class="top-header">
+        <div class="container">
+            <div class="flex-container justify-sp-between">
+                <ul class="phones-list flex-container align-center">
+                    <li class="flex-container align-center"><span class="custom-icon icon-mail-ic"></span>info@shopy.com</li>
+                    <li class="flex-container align-center"><span class="custom-icon icon-phone-book-ic"></span>996 - 5553 - 453</li>
+                </ul>
+                <nav class="social-nav">
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-instagram"></i></a>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <div class="bottom-header">
+        <div class="container">
+            <div class="flex-container justify-sp-between">
+
+            </div>
+        </div>
+    </div>
+</header>
+<!--HEADER END-->
+
+<!--MAIN START-->
+<main>
+    <section class="default-section">
+        <div class="container">
+            <div class="title text-center">
+                <span><span class="orange-text">NEW</span></span>
+            </div>
+        </div>
+    </section>
+</main>
+<!--MAIN END-->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
