--- a/app/category.html
+++ b/app/category.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Category</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!--jQuery Style-->
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="css/flexslider.css">
+    <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+
 
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -92,13 +95,21 @@
                             <div class="aside-section-title">
                                 <span>Price Filter</span>
                             </div>
-                            <div class="range">
-                                <div id="slider-range"></div>
-                                <div class="range-info">
-                                    <label for="amount">Price range:</label>
-                                    <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+                            <form>
+                                <div class="range">
+                                    <div id="slider-range"></div>
+                                    <div class="add-range-value flex-container" >
+                                        <div class="range-input-group">
+                                            <label for="fromValue">From</label>
+                                            <input type="number" name="fromValue" id="fromValue" min="0">
+                                        </div>
+                                        <div class="range-input-group">
+                                            <label for="toValue">To</label>
+                                            <input type="number" name="toValue" id="toValue" min="0">
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
+                            </form>
                         </div>
                         <div class="aside-section white-bg">
                             <div class="aside-section-title">
@@ -518,6 +529,8 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.flexslider-min.js"></script>
+<script src="js/jquery.formstyler.min.js"></script>
 <script src="js/plugins.min.js"></script>
 </body>
 </html>
