--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Home</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!--jQuery Style-->
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="css/flexslider.css">
+    <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+
 
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -75,17 +78,50 @@
     <section>
         <div class="items-carousel flex-container align-center">
             <div class="container">
-                    <div class="items-carousel-description">
-                        <div class="title big orange-text">
-                            <span>FULL WINTER KIT</span>
-                        </div>
-                            <span class="profitable">Half Jacket + Skiny Trousers + Boot leather</span>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                        <div class="price-wrapper profitable">
-                            <span class="price">Price: 120$</span>
-                            <a href="#" class="order-now"><span class="custom-icon icon-cart-ic"></span>Order Now</a>
-                        </div>
-                    </div>
+                <div class="item-flexslider">
+                    <ul class="slides">
+                        <li>
+                            <div class="items-carousel-description">
+                                <div class="title big orange-text">
+                                    <span>FULL WINTER KIT</span>
+                                </div>
+                                <span class="profitable">Half Jacket + Skiny Trousers + Boot leather</span>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                                <div class="price-wrapper profitable">
+                                    <span class="price">Price: 120$</span>
+                                    <a href="#" class="order-now"><span class="custom-icon icon-cart-ic"></span>Order Now</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="items-carousel-description">
+                                <div class="title big orange-text">
+                                    <span>FULL WINTER KIT</span>
+                                </div>
+                                <span class="profitable">Half Jacket + Skiny Trousers + Boot leather</span>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                                <div class="price-wrapper profitable">
+                                    <span class="price">Price: 120$</span>
+                                    <a href="#" class="order-now"><span class="custom-icon icon-cart-ic"></span>Order Now</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="items-carousel-description">
+                                <div class="title big orange-text">
+                                    <span>FULL WINTER KIT</span>
+                                </div>
+                                <span class="profitable">Half Jacket + Skiny Trousers + Boot leather</span>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                                <div class="price-wrapper profitable">
+                                    <span class="price">Price: 120$</span>
+                                    <a href="#" class="order-now"><span class="custom-icon icon-cart-ic"></span>Order Now</a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
             </div>
         </div>
     </section>
@@ -294,20 +330,16 @@
                                         <div class="item-mini-rating">
                                             <ul>
                                                 <li class="rating-icon">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                                    <i class="fa fa-star active-icon" aria-hidden="true"></i>
+                                                </li>
+                                                <li class="rating-icon">
+                                                    <i class="fa fa-star active-icon" aria-hidden="true"></i>
+                                                </li>
+                                                <li class="rating-icon">
+                                                    <i class="fa fa-star active-icon" aria-hidden="true"></i>
                                                 </li>
                                                 <li class="rating-icon">
                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                                </li>
-                                                <li class="rating-icon">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                                </li>
-                                                <li class="rating-icon">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
                                                 </li>
                                             </ul>
                                         </div>
@@ -339,20 +371,16 @@
                                         <div class="item-mini-rating">
                                             <ul>
                                                 <li class="rating-icon">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                                    <i class="fa fa-star active-icon" aria-hidden="true"></i>
+                                                </li>
+                                                <li class="rating-icon">
+                                                    <i class="fa fa-star active-icon" aria-hidden="true"></i>
+                                                </li>
+                                                <li class="rating-icon">
+                                                    <i class="fa fa-star active-icon" aria-hidden="true"></i>
                                                 </li>
                                                 <li class="rating-icon">
                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                                </li>
-                                                <li class="rating-icon">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                                </li>
-                                                <li class="rating-icon">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
                                                 </li>
                                             </ul>
                                         </div>
@@ -384,20 +412,16 @@
                                         <div class="item-mini-rating">
                                             <ul>
                                                 <li class="rating-icon">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                                    <i class="fa fa-star active-icon" aria-hidden="true"></i>
+                                                </li>
+                                                <li class="rating-icon">
+                                                    <i class="fa fa-star active-icon" aria-hidden="true"></i>
+                                                </li>
+                                                <li class="rating-icon">
+                                                    <i class="fa fa-star active-icon" aria-hidden="true"></i>
                                                 </li>
                                                 <li class="rating-icon">
                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                                </li>
-                                                <li class="rating-icon">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                                </li>
-                                                <li class="rating-icon">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star" aria-hidden="true"></i>
                                                 </li>
                                             </ul>
                                         </div>
@@ -495,6 +519,8 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.flexslider-min.js"></script>
+<script src="js/jquery.formstyler.min.js"></script>
 <script src="js/plugins.min.js"></script>
 </body>
 </html>
