--- a/app/category.html
+++ b/app/category.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+    <link rel="stylesheet" href="css/slicknav.css">
 
 
     <link rel="stylesheet" href="css/font-awesome.css">
@@ -30,7 +31,7 @@
 </head>
 <body>
 <!--HEADER START-->
-<header>
+<header class="header">
     <div class="top-header white-bg">
         <div class="container">
             <div class="flex-container justify-sp-between">
@@ -77,8 +78,12 @@
 <main>
     <div class="category-wrap">
         <div class="container">
+            <div class="mobile-sidebar-btn">
+                <i class="fa fa-arrow-circle-right"></i>
+            </div>
+            <div class="overlay"></div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 col-xs-12 mobile-sidebar-wrap">
                     <aside class="sidebar">
                         <div class="aside-section white-bg">
                             <div class="aside-section-title">
@@ -159,9 +164,9 @@
                         </div>
                     </aside>
                 </div>
-                <div class="col-md-9 product-list">
+                <div class="col-md-9 col-xs-12 product-list">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="category.html">
@@ -192,7 +197,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="category.html">
@@ -223,7 +228,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="category.html">
@@ -254,9 +259,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="category.html">
@@ -287,7 +290,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="category.html">
@@ -318,7 +321,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="category.html">
@@ -349,9 +352,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="category.html">
@@ -382,7 +383,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="category.html">
@@ -413,7 +414,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="category.html">
@@ -445,11 +446,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="load-more text-center">
-                        <span class="circle"></span>
-                        <span class="circle"></span>
-                        <span class="circle"></span>
-                    </div>
+                    <a href="#">
+                        <div class="load-more text-center">
+                            <span class="circle"></span>
+                            <span class="circle"></span>
+                            <span class="circle"></span>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -531,6 +534,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/jquery.formstyler.min.js"></script>
+<script src="js/jquery.slicknav.min.js"></script>
 <script src="js/plugins.min.js"></script>
 </body>
 </html>
