--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+    <link rel="stylesheet" href="css/slicknav.css">
 
 
     <link rel="stylesheet" href="css/font-awesome.css">
@@ -30,7 +31,7 @@
 </head>
 <body>
 <!--HEADER START-->
-<header>
+<header class="header">
     <div class="top-header white-bg">
         <div class="container">
             <div class="flex-container justify-sp-between">
@@ -47,9 +48,9 @@
             </div>
         </div>
     </div>
-    <div class="bottom-header white-bg">
+    <div class="bottom-header white-bg top-navbar">
         <div class="container">
-            <div class="flex-container justify-sp-between top-navbar">
+            <div class="flex-container justify-sp-between">
                 <div class="logo flex-element align-center">
                     <a href="">
                         <img src="img/logo.png" alt="">
@@ -65,7 +66,7 @@
                 <div class="user-controls flex-container align-center">
                     <a href="#" class=""><span class="icon-search-ic"></span></a>
                     <a href="#" class=""><span class="icon-user-ic"></span></a>
-                    <a href="#" class=""><span class="icon-cart-ic pos-rel"><span class="label label-default basket-bubble">5</span></span></a>
+                    <a href="#" class=""><span class="icon-cart-ic"></span><span class="label label-default basket-bubble">5</span></a>
                 </div>
             </div>
         </div>
@@ -79,49 +80,58 @@
         <div class="items-carousel flex-container align-center">
             <div class="container">
                 <div class="item-flexslider">
-                    <ul class="slides">
-                        <li>
-                            <div class="items-carousel-description">
-                                <div class="title big orange-text">
-                                    <span>FULL WINTER KIT</span>
-                                </div>
-                                <span class="profitable">Half Jacket + Skiny Trousers + Boot leather</span>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                                <div class="price-wrapper profitable">
-                                    <span class="price">Price: 120$</span>
-                                    <a href="#" class="order-now"><span class="custom-icon icon-cart-ic"></span>Order Now</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="items-carousel-description">
-                                <div class="title big orange-text">
-                                    <span>FULL WINTER KIT</span>
-                                </div>
-                                <span class="profitable">Half Jacket + Skiny Trousers + Boot leather</span>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                                <div class="price-wrapper profitable">
-                                    <span class="price">Price: 120$</span>
-                                    <a href="#" class="order-now"><span class="custom-icon icon-cart-ic"></span>Order Now</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="items-carousel-description">
-                                <div class="title big orange-text">
-                                    <span>FULL WINTER KIT</span>
-                                </div>
-                                <span class="profitable">Half Jacket + Skiny Trousers + Boot leather</span>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                                <div class="price-wrapper profitable">
-                                    <span class="price">Price: 120$</span>
-                                    <a href="#" class="order-now"><span class="custom-icon icon-cart-ic"></span>Order Now</a>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        </ol>
 
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <div class="items-carousel-description">
+                                    <div class="title big orange-text">
+                                        <span>FULL WINTER KIT</span>
+                                    </div>
+                                    <span class="profitable">Half Jacket + Skiny Trousers + Boot leather</span>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                                    <div class="price-wrapper profitable">
+                                        <span class="price">Price: 120$</span>
+                                        <a href="#" class="order-now"><span class="custom-icon icon-cart-ic"></span>Order Now</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="items-carousel-description">
+                                    <div class="title big orange-text">
+                                        <span>FULL WINTER KIT</span>
+                                    </div>
+                                    <span class="profitable">Half Jacket + Skiny Trousers + Boot leather</span>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                                    <div class="price-wrapper profitable">
+                                        <span class="price">Price: 120$</span>
+                                        <a href="#" class="order-now"><span class="custom-icon icon-cart-ic"></span>Order Now</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="items-carousel-description">
+                                    <div class="title big orange-text">
+                                        <span>FULL WINTER KIT</span>
+                                    </div>
+                                    <span class="profitable">Half Jacket + Skiny Trousers + Boot leather</span>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                                    <div class="price-wrapper profitable">
+                                        <span class="price">Price: 120$</span>
+                                        <a href="#" class="order-now"><span class="custom-icon icon-cart-ic"></span>Order Now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -135,7 +145,7 @@
             <span class="subtitle text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
             <div class="new-items">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="item">
                             <div class="item-img">
                                 <a href="category.html">
@@ -168,7 +178,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="item">
                             <div class="item-img">
                                 <a href="category.html">
@@ -199,7 +209,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="item">
                             <div class="item-img">
                                 <a href="category.html">
@@ -230,7 +240,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="item">
                             <div class="item-img">
                                 <a href="category.html">
@@ -263,11 +273,13 @@
                     </div>
                 </div>
             </div>
-            <div class="load-more text-center">
-                <span class="circle"></span>
-                <span class="circle"></span>
-                <span class="circle"></span>
-            </div>
+            <a href="#">
+                <div class="load-more text-center">
+                    <span class="circle"></span>
+                    <span class="circle"></span>
+                    <span class="circle"></span>
+                </div>
+            </a>
         </div>
     </section>
     <!--NEW ARRIVALS END-->
@@ -276,7 +288,7 @@
     <div class="section default-section flex-container justify-sp-between">
         <div class="container">
             <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 col-xs-12">
                     <div class="kit white-bg flex-container justify-sp-between">
                         <div class="sales-block">
                             <div class="light-orange-bg"></div>
@@ -294,7 +306,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 col-xs-12">
                     <div class="area white-bg flex-container justify-sp-between text-center">
                         <span>adv <span class="orange-text"> area</span></span>
                         <p>470 x 100</p>
@@ -314,7 +326,7 @@
             <span class="subtitle text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
             <div class="new-items">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="item-mini align-center">
                             <div class="item-mini-img">
                                 <a href="">
@@ -355,7 +367,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="item-mini align-center">
                             <div class="item-mini-img">
                                 <a href="">
@@ -396,7 +408,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 hidden-xs hidden-sm">
                         <div class="item-mini align-center">
                             <div class="item-mini-img">
                                 <a href="">
@@ -521,6 +533,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/jquery.formstyler.min.js"></script>
+<script src="js/jquery.slicknav.min.js"></script>
 <script src="js/plugins.min.js"></script>
 </body>
 </html>
